b=364300, monospace font sometimes isn't with ATSUI, breaking cols attribute of textarea, r+sr=roc