gfx/thebes/src/gfxQuartzFontCache.h
@@ -72,7 +72,7 @@ public:
     THEBES_INLINE_DECL_REFCOUNTING(FontEntry)
 
     FontEntry(nsString &aName) :
-        mName(aName), mWeight(0), mTraits(0)
+        mName(aName), mWeight(0)
     {
     }
 
@@ -81,11 +81,6 @@ public:
         if (!mWeight)
             RealizeWeightAndTraits();
         return mWeight;
-    }
-    PRUint32 Traits() {
-        if (!mWeight)
-            RealizeWeightAndTraits();
-        return mTraits;
     }
     PRBool IsFixedPitch();
     PRBool IsItalicStyle();
@@ -99,7 +94,8 @@ protected:
 
     nsString mName;
     PRInt32 mWeight;
-    PRUint32 mTraits;
+    PRPackedBool mFixedPitch;
+    PRPackedBool mItalicStyle;
 };
 
 class gfxQuartzFontCache {
@@ -133,6 +129,8 @@ public:
     void UpdateFontList() { InitFontList(); }
 
     const nsString& GetPostscriptNameForFontID(ATSUFontID fid);
+
+    PRBool IsFixedPitch(ATSUFontID fid);
 
 private:
     static gfxQuartzFontCache *sSharedFontCache;
